
2017-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: version bump to 2.2rc
	* general: temporarily disabled code-coverage because of portability issues

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac [_BSD_SOURCE]: set COB_HAS_UTC_OFFSET to "yes" if C compiler
	  defines _BSD_SOURCE as we can access the offset directly in this case
	* configure.ac: output detailed version information for BDB, if available

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: added --enable-code-coverage and test for code-coverage
	  tools if enabled by AX_CODE_COVERAGE,
	  always check if user specified optimization options in CFLAGS,
	  not only when --enable-debug is active,
	  compile with -O0 for both --enable-debug and --enable-code-coverage
	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	  which provides new target `make check-code-coverage`

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file,
	  define prerequisites to fix parallel builds

2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: change in library check for BDB - prefer library
	  with version number from db.h included (-ldb-6.1 over -ldb) to
	  prevent errors on system with multiple versions that linked
	  against wrong version, see bug #100

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: removed AM_MAINTAINER_MODE, added AM_PROG_LEX,
	  AC_PROG_YACC, AM_MISSING_PROG([HELP2MAN], [help2man])
	* create_win_dist.sh: integrated hack for _MSC_VER from
	  cobc/Makefile.am; use a clean temporary folder for building

2017-04-18  Ron Norman <rjn@inglenet.com>

	* configure.ac: check for 'isfinite' (HAVE_ISFINITE)
	  'isfinite' is in the C99 standard and 'finite' deprecated with some